--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
         "strictNullChecks": true,
         "suppressImplicitAnyIndexErrors": true,
         "target": "es5",
-        "types": ["jest", "node", "react"],
+        "types": ["node", "react", "react-dom"],
         "typeRoots": ["./node_modules/@types"]
     },
     "include": ["client"],
