--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "connect-history-api-fallback": "^2.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-error-boundary": "^3.1.4",
         "react-hot-toast": "^2.4.0",
         "react-promise-suspense": "^0.3.3",
         "react-router-dom": "^6.6.2"
