--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@babel/preset-env": "^7.20.2",
         "@babel/preset-react": "^7.18.6",
         "@babel/preset-typescript": "^7.18.6",
         "@types/jest": "^29.2.5",
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.10",
         "babel": "^6.23.0",
+        "babel-jest": "^29.5.0",
         "browser-sync": "^2.27.11",
         "browser-sync-webpack-plugin": "^2.3.0",
         "cross-env": "^7.0.3",
@@ -28,6 +30,7 @@
         "jsdoc-babel": "^0.5.0",
         "laravel-mix": "^6.0.49",
         "minami": "^1.2.3",
+        "react-test-renderer": "^18.2.0",
         "sass": "^1.57.1",
         "sass-loader": "^13.2.0",
         "taffydb": "^2.7.3",
